Fix: sizing/stretch of search bar

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
 
 .NavBar_Logo_Search_Container {
   display: flex;
+  align-items: center;
 }
 
 .NavBubble_Container {
