--- a/frontend/src/Components/SearchBar/SearchBar.css
+++ b/frontend/src/Components/SearchBar/SearchBar.css
@@ -4,6 +4,7 @@
   border: 1px solid rgba(0, 0, 0, 0.25);
   border-radius: 999px;
   min-height: 35px;
+  max-height: 35px;
   padding: var(--pd-xsm);
   padding-left: var(--pd-m);
   min-width: 200px;
